--- a/orders/templates/orders/create_order.html
+++ b/orders/templates/orders/create_order.html
@@ -113,12 +113,24 @@
                     {% endfor %}
                 </div>
                 
-                <button type="button" class="btn btn-secondary" onclick="addForm()">Add Another Item</button>
+                <!-- add new items first show items and then add new item -->
+                <div class="mt-3">
+                    <select id="product-select" class="form-select">
+                        <option value="" selected>Select a product to add</option>
+                        {% for product in products %}
+                            <option value="{{ product.id }}">{{ product.name }} - ${{ product.price }}</option>
+                        {% endfor %}
+                    </select>
+                    <a href="{% url 'orders:add_item_to_order' %}" class="btn btn-sm btn-outline-secondary">Add Item</a>
+                </div>
+
+
             </div>
             
             <!-- Submit Button -->
             <div class="d-flex justify-content-between">
                 <a href="{% url 'orders:order_list' %}" class="btn btn-outline-secondary">Cancel</a>
+                <!-- add order item in oreddr form -->
                 <button type="submit" class="btn btn-primary">Create Order</button>
             </div>
             
@@ -153,10 +165,7 @@
             toggleCustomerFields();
         });
         
-        // Add new order item form (simplified version)
-        function addForm() {
-            alert('Add item functionality will be implemented with dynamic forms');
-        }
+        
     </script>
 </body>
 </html>
